yamls/petclinic_deployment/petclinic-dep-svc-v1.yaml

##################################################################################################

# Hello message services being called by main service visits-service

##################################################################################################

apiVersion: v1

kind: Service 

metadata:
  name: visits-service
  labels:
    app: visits-service-svc-label

spec:
  ports:
  - port: 9999
    name: http

  selector:
    app: visits-service-v1

  type: ClusterIP

---

apiVersion: apps/v1

kind: Deployment

metadata:
  name: visits-service-deployment-v1
  labels:
    app: visits-service-dep-label

spec:
  replicas: 2
  selector: 
    matchLabels: 
      app: visits-service-v1

  template: # template for the pods
    metadata:
      labels:
        app: visits-service-v1

    spec:
      containers:
      - name: visits-service-ver1
        image: saurabh2204/spring-petclinic-visits-service-istio-with-externaldb:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 9898

---


##################################################################################################

# Hello message services being called by main service customers-service

##################################################################################################

apiVersion: v1

kind: Service 

metadata:
  name: customers-service
  labels:
    app: customers-service-svc-label

spec:
  ports:
  - port: 8080
    name: http

  selector:
    app: customers-service-v1-v3

  type: ClusterIP

---

apiVersion: apps/v1

kind: Deployment

metadata:
  name: customers-service-deployment-v1
  labels:
    app: customers-service-dep-label

spec:
  replicas: 2
  selector: 
    matchLabels: 
      app: customers-service-v1-v3

  template: # template for the pods
    metadata:
      labels:
        app: customers-service-v1-v3
        version: v1

    spec:
      containers:
      - name: customers-service-ver1
        image: saurabh2204/spring-petclinic-customers-service-istio-with-externaldb:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 9899

---

apiVersion: apps/v1

kind: Deployment

metadata:
  name: vets-service-deployment-v1
  labels:
    app: vets-service-dep-label

spec:
  replicas: 1
  selector: 
    matchLabels: 
      app: vets-service-v1-v2

  template: # template for the pods
    metadata:
      labels:
        app: vets-service-v1-v2
        version: v1

    spec:
      containers:
      - name: vets-service-ver1
        image: saurabh2204/spring-petclinic-vets-service-istio-v1-with-externaldb:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8899

---

##################################################################################################

# Hello message services being called by main service api-service

##################################################################################################

apiVersion: v1

kind: Service

metadata:

  name: api-service
  labels:
    app: api-service

spec:
  ports:
  - port: 8081
    name: http

  selector:
    app: api-service
  type: LoadBalancer

---

apiVersion: apps/v1

kind: Deployment

metadata:
  name: api-service-deployment-v1

spec:
  replicas: 1
  selector: 
    matchLabels: 
      app: api-service

  template: # template for the pods
    metadata:
      labels:
        app: api-service

    spec:
      containers:
      - name: api-service
        image: saurabh2204/spring-petclinic-api-gateway-istio:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8087
